--- a/style/pages/_hero.scss
+++ b/style/pages/_hero.scss
@@ -4,7 +4,7 @@
       padding-top: 3rem;
    }
    display: grid;
-   grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+   grid-template-columns: repeat(auto-fit, minmax(31rem, 1fr));
    align-items: center;
    justify-content: center;
 
