--- a/style/utils/_responsive.scss
+++ b/style/utils/_responsive.scss
@@ -37,7 +37,8 @@
       opacity: 0.8;
    }
    .find-doctor-form {
-      left: 50%;
+      left: 21%;
+      top: 0%;
    }
    .find-right-guide--wrapper-text {
       width: 100%;
